--- a/src/components/education.css
+++ b/src/components/education.css
@@ -9,14 +9,14 @@
     font-weight: bold;
     font-size: 50px;
     color: #0a0a0b;
-    font-family: 'Fraunces', serif; 
+    font-family: 'Lato', sans-serif; 
   }
   
 .education-content {
     font-size: 25px;
     line-height: 1.5rem;
     text-align: center;
-    font-family: 'Fraunces', serif; 
+    font-family: 'Lato', sans-serif; 
   }
 
   
