--- a/src/components/workExperience.css
+++ b/src/components/workExperience.css
@@ -24,7 +24,7 @@
     font-weight: bold;
     font-size: 50px;
     color: #0a0a0b;
-    font-family: 'Fraunces', serif;
+    font-family: 'Lato', sans-serif;
   }
   
   .experience-heading ::after {
